--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +14,7 @@
     "@google-cloud/storage": "^5.16.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "file-type": "^17.0.1",
     "multer": "^1.4.3",
     "pg": "^8.7.1"
   }
