--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "art-api",
   "version": "1.0.0",
   "description": "A small REST API to manage artworks",
-  "main": "src/server.js",
-  "type": "module",
+  "main": "build/server.js",
   "scripts": {
-    "start": "node -r dotenv/config . && node src/server.js",
+    "dev": "nodemon build/server.js",
+    "start": "ts-node -r dotenv/config . && ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,10 +13,21 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^5.16.1",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
+    "@types/pg": "^8.6.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "file-type": "^17.0.1",
+    "file-type": "^17.1.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.10",
+    "typescript": "^4.5.5"
   }
 }
